# Stellar-Save

./: .env.example  .gitignore  Cargo.lock.bak2  Cargo.toml  GIT_CLEANUP_GUIDE.md  README.md  SECURITY.md  SECURITY_FEATURES_SUMMARY.md  SECURITY_IMPLEMENTATION_CHECKLIST.md  errors.txt  errors2.txt  errors3.txt  errors4.txt  errors5.txt  errors6.txt  errors7.txt  package-lock.json  package.json  pnpm-lock.yaml
.github/: fuzz.yml  trivy-ignore.txt
contracts/guess-the-number/: Cargo.toml  GET_TOTAL_GROUPS_IMPLEMENTATION.md
contracts/guess-the-number/src/: error.rs  lib.rs  storage.rs  test.rs
contracts/guess-the-number/test_snapshots/test/: test_activate_group_fails_if_already_active.1.json  test_activate_group_fails_without_members.1.json  test_get_group_returns_correct_data.1.json  test_get_total_groups_created_counts_all_statuses.1.json  test_get_total_groups_created_increments_on_group_creation.1.json  test_get_total_groups_created_persists_across_operations.1.json  test_get_total_groups_created_returns_zero_initially.1.json  test_get_total_groups_created_with_multiple_admins.1.json  test_group_ids_are_sequential.1.json  (+8 more)
contracts/stellar-save/: Cargo.toml  mutants.toml
contracts/stellar-save/src/: contract.rs  contribution.rs  error.rs  escrow_property_tests.rs  events.rs  gas_benchmark_tests.rs  governance_property_tests.rs  group.rs  insurance_property_tests.rs  lib.rs  migration.rs  migration_tests.rs  payout.rs  payout_executor.rs  pool.rs  storage.rs  test.rs  types.rs  xlm.rs
contracts/stellar-save/test_snapshots/: test_get_total_groups.1.json
(+324 files in other folders)
