[package]
name = "guess-the-number"
description = "Admin sets up the pot, anyone can guess to win it"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[package.metadata.stellar]
# Set contract metadata for authors, homepage, and version based on the Cargo.toml package values
cargo_inherit = true 

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "25.3.1"
stellar-registry = "0.0.10"

[dev-dependencies]
stellar-xdr = { version = "25.0.0", features = ["curr", "serde"] }
soroban-sdk = { version = "25.3.1", features = ["testutils"] }
